// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Renders a Header component in dev profile with LoadingBar, Navbar, Nav and dev ribbon. 1`] = `
<div>
  <div
    id="app-header"
  >
    <Connect(LoadingBar)
      className="loading-bar"
    />
    <Navbar
      className="jh-navbar"
      dark={true}
      expand="sm"
      fixed="top"
      tag="nav"
    >
      <Button
        color="secondary"
        id="drawerToggler"
        onClick={[Function]}
        tag="button"
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon="bars"
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
      </Button>
      <Component />
      <NavbarToggler
        aria-label="Menu"
        onClick={[Function]}
        tag="button"
        type="button"
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon="caret-down"
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
      </NavbarToggler>
      <Collapse
        appear={false}
        enter={true}
        exit={true}
        in={false}
        isOpen={false}
        mountOnEnter={false}
        navbar={true}
        onEnter={[Function]}
        onEntered={[Function]}
        onEntering={[Function]}
        onExit={[Function]}
        onExited={[Function]}
        onExiting={[Function]}
        tag="div"
        timeout={350}
        unmountOnExit={false}
      >
        <Nav
          className="ml-auto"
          id="header-tabs"
          navbar={true}
          tag="ul"
          vertical={false}
        >
          <Component />
          <Component
            showDatabase={true}
            showSwagger={true}
          />
          <Component
            isAuthenticated={true}
          />
        </Nav>
      </Collapse>
    </Navbar>
  </div>
</div>
`;

exports[`Header Renders a Header component in prod profile with LoadingBar, Navbar, Nav. 1`] = `
<div>
  <div
    id="app-header"
  >
    <Connect(LoadingBar)
      className="loading-bar"
    />
    <Navbar
      className="jh-navbar"
      dark={true}
      expand="sm"
      fixed="top"
      tag="nav"
    >
      <Button
        color="secondary"
        id="drawerToggler"
        onClick={[Function]}
        tag="button"
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon="bars"
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
      </Button>
      <Component />
      <NavbarToggler
        aria-label="Menu"
        onClick={[Function]}
        tag="button"
        type="button"
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon="caret-down"
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size={null}
          spin={false}
          symbol={false}
          title=""
          transform={null}
        />
      </NavbarToggler>
      <Collapse
        appear={false}
        enter={true}
        exit={true}
        in={false}
        isOpen={false}
        mountOnEnter={false}
        navbar={true}
        onEnter={[Function]}
        onEntered={[Function]}
        onEntering={[Function]}
        onExit={[Function]}
        onExited={[Function]}
        onExiting={[Function]}
        tag="div"
        timeout={350}
        unmountOnExit={false}
      >
        <Nav
          className="ml-auto"
          id="header-tabs"
          navbar={true}
          tag="ul"
          vertical={false}
        >
          <Component />
          <Component
            showDatabase={false}
            showSwagger={false}
          />
          <Component
            isAuthenticated={true}
          />
        </Nav>
      </Collapse>
    </Navbar>
  </div>
</div>
`;
